--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
   <nav>
     <a href="#opening" class="active">Opening</a>
     <a href="#baju">Baju</a>
-    <a href="#topi">Topi</a>
-    <a href="#aksesoris">Aksesoris</a>
-    <a href="#closing">Closing</a>
+    <a href="#cooming soon">Topi</a>
+    <a href="#cooming soon">Aksesoris</a>
+    <a href="#cooming soon">Closing</a>
   </nav>
 
   <!-- Page 1: Opening -->
@@ -194,3 +194,4 @@
 
 </body>
 </html>
+
